fix(block-grid): make text full width of item so alignment works

--- a/src/content-blocks/BlockGrid/BlockGrid.scss
+++ b/src/content-blocks/BlockGrid/BlockGrid.scss
@@ -21,6 +21,10 @@
 			background-position: center center;
 		}
 
+		.c-block-grid__text-wrapper {
+			width: 100%;
+		}
+
 		strong {
 			display: block;
 		}
